<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Week2-GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnLabel">Search</string>
    <string name="SearchCriteriaHint">Enter image search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_advanced_search_options">AdvancedSearchOptions</string>
    <string name="imgSizeLabel">"Image Size: "</string>
    <string name="colorFilterLabel">"Color Filter: "</string>
    <string name="imgTypeLabel">"Image Type: "</string>
    <string name="siteFilterLabel">"Site Filter: "</string>
    <string name="siteFilterHint">Enter site filter</string>
    <string name="advSearchOptionsLabel">"Advanced Search Options: "</string>
    <string name="btnSaveLabel">Save</string>

</resources>
