<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdvancedSearchOptions" >

    <TextView
        android:id="@+id/tvImgSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImgSizeOptions"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/imgSizeLabel" />

    <Spinner
        android:id="@+id/spColorFilterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImgSizeOptions" />

    <TextView
        android:id="@+id/tvColorFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spColorFilterOptions"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/colorFilterLabel" />

    <Spinner
        android:id="@+id/spImgTypeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spColorFilterOptions" />

    <TextView
        android:id="@+id/tvImgTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImgTypeOptions"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/imgTypeLabel" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImgTypeOptions"
        android:layout_toRightOf="@+id/tvSiteFilterLabel"
        android:ems="10"
        android:hint="@string/siteFilterHint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSiteFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:layout_alignParentLeft="true"
        android:text="@string/siteFilterLabel" />

    <TextView
        android:id="@+id/tvAdvSearchOptionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/advSearchOptionsLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spImgSizeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvAdvSearchOptionsLabel" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:onClick="onSave"
        android:text="@string/btnSaveLabel" />

</RelativeLayout>
